This is my first article about drones .

--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
             <time>date goes here</time>
             <p>Summary of the article and the technology it talks about</p>
         </article>
+        <article>
+            <h2>We can use drones to get inside and learn more about active, gassy volcanoes</h2>
+            <img src="https://images.theconversation.com/files/484123/original/file-20220912-1707-5fe5og.jpg?ixlib=rb-1.1.0&q=30&auto=format&w=754&h=503&fit=crop&dpr=2" alt="Drone on a volcano">
+            <a href="https://theconversation.com/we-can-use-drones-to-get-inside-and-learn-more-about-active-gassy-volcanoes-189524">https://theconversation.com/we-can-use-drones-to-get-inside-and-learn-more-about-active-gassy-volcanoes-189524</a>
+            <time>September 22, 2022 </time>
+            <p>This article basically provides with an overview on how we can guess on accuracy of an volcanic eruptions and how they can be stopped pon right time  </p>
+        </article>
         <!-- end of sample -->
     </main>
 </body>
