Added my second article

--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
             <time>September 22, 2022 </time>
             <p>This article basically provides with an overview on how we can guess on accuracy of an volcanic eruptions and how they can be stopped pon right time  </p>
         </article>
+        <article>
+            <h2>How YouTube
+                changed the world</h2>
+            <img src="https://s.telegraph.co.uk/graphics/projects/youtube/themes/youtube/img/fallback.png" alt="Photogrid with different youtube content">
+            <a href="https://s.telegraph.co.uk/graphics/projects/youtube/">https://s.telegraph.co.uk/graphics/projects/youtube/</a>
+            <time>9th February 2015</time>
+            <p>The following article shows how youtube has made our lives easier with increasing users everyday.It also mention the contents the youtube provides starting from comedy to music everything.</p>
+        </article>
         <!-- end of sample -->
     </main>
 </body>
