Added my third article

--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
             <time>9th February 2015</time>
             <p>The following article shows how youtube has made our lives easier with increasing users everyday.It also mention the contents the youtube provides starting from comedy to music everything.</p>
         </article>
+        <article>
+            <h2>Understanding Bluetooth Technology</h2>
+            <img src="no image" alt="No image">
+            <a href="https://www.cisa.gov/news-events/news/understanding-bluetooth-technology">https://www.cisa.gov/news-events/news/understanding-bluetooth-technology</a>
+            <time>February 01, 2021</time>
+            <p>The following article talks about what is bluetooth, what are security concerns and how do we protect ourselves.</p>
+        </article>
         <!-- end of sample -->
     </main>
 </body>
