4th article added

--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
             <time>February 01, 2021</time>
             <p>The following article talks about what is bluetooth, what are security concerns and how do we protect ourselves.</p>
         </article>
+        <h2>Programming</h2>
+            <img src="https://theconversation.com/from-ancient-jewish-texts-to-androids-to-ai-a-just-right-sequence-of-numbers-or-letters-turns-matter-into-meaning-207895" alt="Dots connecting into a pattern. ">
+            <a href="https://theconversation.com/ca/topics/computer-programming-8509">https://theconversation.com/ca/topics/computer-programming-8509Article link here</a>
+            <time>10/13/2023</time>
+            <p>The following article shows history, invention and uses of programming</p>
+        </article>
         <!-- end of sample -->
     </main>
 </body>
