--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student Name - Emerging Technology Blog</title>
+    <title>Mansi Makwana - Emerging Technology Blog</title>
 </head>
 <body>
     <h1>Emerging Technologies</h1>
@@ -34,13 +34,13 @@
         </article>
         <article>
             <h2>Understanding Bluetooth Technology</h2>
-            <img src="no image" alt="No image">
+            <img src="https://media.gcflearnfree.org/content/5575ed49317fa91014c2dd26_06_08_2015/bluetooth-logo.png" alt="bluetooth-logo">
             <a href="https://www.cisa.gov/news-events/news/understanding-bluetooth-technology">https://www.cisa.gov/news-events/news/understanding-bluetooth-technology</a>
             <time>February 01, 2021</time>
             <p>The following article talks about what is bluetooth, what are security concerns and how do we protect ourselves.</p>
         </article>
         <h2>Programming</h2>
-            <img src="https://theconversation.com/from-ancient-jewish-texts-to-androids-to-ai-a-just-right-sequence-of-numbers-or-letters-turns-matter-into-meaning-207895" alt="Dots connecting into a pattern. ">
+            <img src="https://images.theconversation.com/files/553059/original/file-20231010-19-m5thmj.jpg?ixlib=rb-1.1.0&rect=79%2C114%2C2145%2C1071&q=45&auto=format&w=668&h=324&fit=crop"alt="Dots connecting into a pattern. ">
             <a href="https://theconversation.com/ca/topics/computer-programming-8509">https://theconversation.com/ca/topics/computer-programming-8509Article link here</a>
             <time>10/13/2023</time>
             <p>The following article shows history, invention and uses of programming</p>
