--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mansi Makwana - Emerging Technology Blog</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+
 </head>
 <body>
     <h1>Emerging Technologies</h1>
-    <main>
+
         <!-- sample of a blog post -->
         <article>
             <h2>article title here</h2>
